Started with old sample from cuda samples

--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cuda toolkit
+        uses: Jimver/cuda-toolkit@v0.2.19
+
       - name: Build project
         run: |
           cmake .
