Started with old sample from cuda samples

--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Cuda toolkit
         uses: Jimver/cuda-toolkit@v0.2.19
 
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v2
+
       - name: Build project
         run: |
           cmake .
