--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -31,4 +31,10 @@ jobs:
       - name: Build project
         run: |
           cmake .
-          MSBuild /p:Platform=x64 /p:Configuration=Release
+          MSBuild cmake_and_cuda.sln /p:Platform=x64 /p:Configuration=Release /t:particle_test
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: particle_test
+          path: particle_test/*
