--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build project
         run: |
           cmake .
-          MSBuild cmake_and_cuda.sln /p:Platform=x64 /p:Configuration=Release /t:particle_test
+          MSBuild cmake_and_cuda.sln /p:Platform=x64 /p:Configuration=Release /t:profanity_cuda
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
