--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(cmake_and_cuda LANGUAGES CXX CUDA)
 include(CTest)
 
 add_library(particles STATIC
+  ArgParser.hpp
   randomize.cpp
   randomize.h
   particle.cu
@@ -30,17 +31,9 @@ set_target_properties( particles
 
 if(BUILD_TESTING)
 
-  add_executable(particle_test test.cu)
+  add_executable(profanity_cuda test.cu)
 
-  set_target_properties(particle_test PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
-  target_link_libraries(particle_test PRIVATE particles)
+  set_target_properties(profanity_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
+  target_link_libraries(profanity_cuda PRIVATE particles)
 
-  add_test(NAME particles_10k COMMAND particle_test 10000 )
-  add_test(NAME particles_256k COMMAND particle_test 256000 )
-
-  if(APPLE)
-    # We need to add the default path to the driver (libcuda.dylib) as an rpath,
-    # so that the static cuda runtime can find it at runtime.
-    set_property(TARGET particle_test PROPERTY BUILD_RPATH ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
-  endif()
 endif()
