Working on seeds

--- a/.gitignore
+++ b/.gitignore
@@ -7,29 +7,6 @@
 /particles.dir/
 /Testing/
 /x64/
-/ALL_BUILD.vcxproj.user
+/*.vcxproj*
 /CTestTestfile.cmake
-/Continuous.vcxproj
-/Continuous.vcxproj.filters
-/cmake_and_cuda.sln
-/ALL_BUILD.vcxproj
-/cmake_install.cmake
-/DartConfiguration.tcl
-/ALL_BUILD.vcxproj.filters
-/Experimental.vcxproj
-/Experimental.vcxproj.filters
-/Nightly.vcxproj
-/Nightly.vcxproj.filters
-/NightlyMemoryCheck.vcxproj
-/NightlyMemoryCheck.vcxproj.filters
-/particle_test.vcxproj
-/particle_test.vcxproj.filters
-/particle_test.vcxproj.user
-/particles.vcxproj
-/particles.vcxproj.user
-/particles.vcxproj.filters
-/RUN_TESTS.vcxproj
-/RUN_TESTS.vcxproj.filters
-/ZERO_CHECK.vcxproj
-/ZERO_CHECK.vcxproj.filters
 /Release/
