Added keccak test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ add_library(particles STATIC
   ArgParser.hpp
   randomize.cpp
   randomize.h
+  keccak.cu
+  keccak.h
   particle.cu
   particle.h
   precomp.cpp
