--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -29,3 +29,15 @@ jobs:
         run: |
           cmake .
           make
+
+      - nane: List files
+        run: |
+          ls -la
+          tree
+          
+
+      - name: Upload cuda_profanity
+        uses: actions/upload-artifact@v4
+        with:
+          name: cuda_profanity
+          path: particles.dir
