--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -30,7 +30,7 @@ jobs:
           cmake .
           make
 
-      - nane: List files
+      - name: List files
         run: |
           ls -la
           tree
