--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -30,14 +30,8 @@ jobs:
           cmake .
           make
 
-      - name: List files
-        run: |
-          ls -la
-          tree
-          
-
-      - name: Upload cuda_profanity
+      - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
-          name: cuda_profanity
-          path: particles.dir
+          name: profanity_cuda
+          path: profanity_cuda
