Upload linux binary

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Cuda toolkit
         uses: Jimver/cuda-toolkit@v0.2.19
+        with:
+          cuda: '12.4.1'
 
       - name: Build project
         run: |
