--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,10 +19,6 @@ add_library(particles STATIC
   debug_utils.cpp
   )
 
-# Request that particles be built with -std=c++11
-# As this is a public compile feature anything that links to particles
-# will also build with -std=c++11
-target_compile_features(particles PUBLIC cxx_std_11)
 
 # We need to explicitly state that we need all CUDA files in the particle
 # library to be built with -dc as the member functions could be called by
@@ -33,7 +29,7 @@ set_target_properties( particles
 
 if(BUILD_TESTING)
 
-  add_executable(profanity_cuda test.cu)
+  add_executable(profanity_cuda profanity.cu)
 
   set_target_properties(profanity_cuda PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
   target_link_libraries(profanity_cuda PRIVATE particles)
