Faster rebuilding when switched to cpp from cu (after kernel separation it is possible)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(profanity_cuda
   keccak.cu
   keccak.h
   create3.cu
-  create3search.cu
+  create3search.cpp
   create3.h
   precomp.cpp
   precomp.hpp
