Fixing linux build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required(VERSION 3.22 FATAL_ERROR)
 
 project(profanity_cuda LANGUAGES CXX CUDA)
 
+
 set(CMAKE_CXX_STANDARD 20)
 
 # Set the CUDA architecture (optional)
@@ -24,6 +25,11 @@ add_executable(profanity_cuda
   debug_utils.hpp
   debug_utils.cpp
  )
+
+ if(UNIX AND NOT APPLE)
+     target_include_directories(profanity_cuda /usr/local/cuda/targets/x86_64-linux/include)
+ endif()
+
 
 # Additional compile options (optional)
 #target_compile_options(profanity_cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--use_fast_math>)
