--- a/.github/workflows/build-ubuntu-docker.yml
+++ b/.github/workflows/build-ubuntu-docker.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build docker
         run: |
           docker build -t profanity_cuda .
