--- a/.github/workflows/build-win-self-hosted.yml
+++ b/.github/workflows/build-win-self-hosted.yml
@@ -32,3 +32,7 @@ jobs:
         with:
           name: Executable
           path: Release/*
+
+      - name: Cleanup
+        run: |
+          del /f /q .\*
