--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -24,10 +24,8 @@ jobs:
 
       - name: Cuda toolkit
         run: |
-          wget https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2404/x86_64/cuda-keyring_1.1-1_all.deb
-          sudo dpkg -i cuda-keyring_1.1-1_all.deb
-          apt-get update
-          apt-get -y install cuda-toolkit-12-8
+          wget https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
+          sudo sh cuda_12.8.0_570.86.10_linux.run --silent --toolkit --override
 
       - name: Build project
         run: |
