--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Cuda toolkit
         run: |
-          wget https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
+          wget -q https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
           sudo sh cuda_12.8.0_570.86.10_linux.run --silent --toolkit --override
 
       - name: Build project
