--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -1,15 +1,38 @@
 name: Release
 
 on:
-  workflow_run:
-    workflows: ["Release-build-12.4.1"]
-    types:
-      - completed
+  push:
+    tags:
+      - '*'
 
 jobs:
+  build-release:
+    name: Build Project
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Cuda toolkit
+        run: |
+          wget -q https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
+          sudo sh cuda_12.8.0_570.86.10_linux.run --silent --toolkit --override
+
+      - name: Run build script
+        run: python build-cross.py
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: profanity_cuda-12.4.1
+          path: profanity_cuda
+          expires-in: 1h
+
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
+    needs: build-release
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
