--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -23,9 +23,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cuda toolkit
-        run: |
-          wget -q https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
-          sudo sh cuda_12.8.0_570.86.10_linux.run --silent --toolkit --override
+        uses: Jimver/cuda-toolkit@v0.2.19
+        with:
+          cuda: '12.4.1'
 
       - name: Build project
         run: |
@@ -37,3 +37,4 @@ jobs:
         with:
           name: profanity_cuda
           path: profanity_cuda
+          retention-days: 1
