--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cuda toolkit
-        run: |
-          wget -q https://developer.download.nvidia.com/compute/cuda/12.8.0/local_installers/cuda_12.8.0_570.86.10_linux.run
-          sudo sh cuda_12.8.0_570.86.10_linux.run --silent --toolkit --override
+        uses: Jimver/cuda-toolkit@v0.2.19
+        with:
+          cuda: '12.4.1'
 
       - name: Run build script
         run: python build-cross.py
@@ -27,7 +27,7 @@ jobs:
         with:
           name: profanity_cuda-12.4.1
           path: profanity_cuda
-          expires-in: 1h
+          retention-days: 1
 
   release:
     name: Create GitHub Release
