--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -29,8 +29,7 @@ jobs:
 
       - name: Build project
         run: |
-          cmake .
-          make
+          python build-cross.py
 
       - name: Upload binary
         uses: actions/upload-artifact@v4
