--- a/.github/workflows/build-win.yml
+++ b/.github/workflows/build-win.yml
@@ -32,8 +32,7 @@ jobs:
 
       - name: Build project
         run: |
-          cmake .
-          MSBuild profanity_cuda.sln /p:Platform=x64 /p:Configuration=Release /t:profanity_cuda
+          python build-cross.py
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
