--- a/.github/workflows/build-ubuntu-docker.yml
+++ b/.github/workflows/build-ubuntu-docker.yml
@@ -20,7 +20,7 @@ jobs:
 
     permissions:
       contents: read
-      packages: write  # Required to push to GHCR
+      packages: write
 
     steps:
       - name: Checkout repository
