--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -34,6 +34,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build-release
 
+    permissions:
+      contents: write
+
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
