--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: profanity_cuda-12.4.1
-          path: profanity_cuda
+          path: profanity_cuda-12.4.1
           retention-days: 1
 
   release:
