--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-release:
     name: Build Project
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout repository
