--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -31,10 +31,35 @@ jobs:
           path: profanity_cuda-12.4.1
           retention-days: 1
 
+  build-release-2:
+    name: Build Project
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Cuda toolkit
+        uses: Jimver/cuda-toolkit@v0.2.19
+        with:
+          cuda: '12.0'
+
+      - name: Run build script
+        run: |
+          python build-cross.py
+          mv profanity_cuda profanity_cuda-12.0
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: profanity_cuda-12.0
+          path: profanity_cuda-12.0
+          retention-days: 1
+
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: build-release
+    needs: [build-release, build-release-2]
 
     permissions:
       contents: write
@@ -45,9 +70,14 @@ jobs:
         with:
           name: profanity_cuda-12.4.1
 
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: profanity_cuda-12.0
+
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
         with:
-          files: profanity_cuda-12.4.1
+          files: [profanity_cuda-12.4.1, profanity_cuda-12.0]
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
