--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -6,8 +6,8 @@ on:
       - '*'
 
 jobs:
-  build-release:
-    name: Build Project
+  build-release-12-4-1:
+    name: Build Ubuntu 22.04 - cuda version 12.4.1
     runs-on: ubuntu-22.04
 
     steps:
@@ -18,6 +18,8 @@ jobs:
         uses: Jimver/cuda-toolkit@v0.2.19
         with:
           cuda: '12.4.1'
+          use-github-cache: 'false'
+          use-local-cache: 'false'
 
       - name: Run build script
         run: |
@@ -31,8 +33,7 @@ jobs:
           path: profanity_cuda-12.4.1
           retention-days: 1
 
-
-  build-release-3:
+  build-release-12-2-1:
     name: Build Project
     runs-on: ubuntu-22.04
 
@@ -59,10 +60,37 @@ jobs:
           path: profanity_cuda-12.2.1
           retention-days: 1
 
+  build-release-12-8-0:
+    name: Build Project
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Cuda toolkit
+        uses: Jimver/cuda-toolkit@v0.2.19
+        with:
+          cuda: '12.8.0'
+          use-github-cache: 'false'
+          use-local-cache: 'false'
+
+      - name: Run build script
+        run: |
+          python build-cross.py
+          mv profanity_cuda profanity_cuda-12.8.0
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: profanity_cuda-12.8.0
+          path: profanity_cuda-12.8.0
+          retention-days: 1
+
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: [build-release, build-release-3]
+    needs: [build-release-12-2-1, build-release-12-4-1, build-release-12-8-0]
 
     permissions:
       contents: write
@@ -73,18 +101,22 @@ jobs:
         with:
           name: profanity_cuda-12.4.1
 
-
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: profanity_cuda-12.2.1
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: profanity_cuda-12.8.0
 
       - name: Upload release asset
         uses: softprops/action-gh-release@v2
         with:
           files: |
             profanity_cuda-12.4.1
-            profanity_cuda-12.1.1
-            profanity_cuda-12.0.1
+            profanity_cuda-12.8.0
+            profanity_cuda-12.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
