--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-release-12-4-1:
-    name: Build Ubuntu 22.04 - cuda version 12.4.1
+    name: Build Ubuntu 12.4.1
     runs-on: ubuntu-22.04
 
     steps:
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cuda toolkit
-        uses: Jimver/cuda-toolkit@v0.2.19
+        uses: Jimver/cuda-toolkit@v0.2.21
         with:
           cuda: '12.4.1'
           use-github-cache: 'false'
@@ -34,7 +34,7 @@ jobs:
           retention-days: 1
 
   build-release-12-2-1:
-    name: Build Project
+    name: Build Ubuntu 12.2.1
     runs-on: ubuntu-22.04
 
     steps:
@@ -42,7 +42,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cuda toolkit
-        uses: Jimver/cuda-toolkit@v0.2.19
+        uses: Jimver/cuda-toolkit@v0.2.21
         with:
           cuda: '12.2.1'
           use-github-cache: 'false'
@@ -61,7 +61,7 @@ jobs:
           retention-days: 1
 
   build-release-12-8-0:
-    name: Build Project
+    name: Build Ubuntu 12.8.0
     runs-on: ubuntu-latest
 
     steps:
@@ -69,7 +69,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cuda toolkit
-        uses: Jimver/cuda-toolkit@v0.2.19
+        uses: Jimver/cuda-toolkit@v0.2.21
         with:
           cuda: '12.8.0'
           use-github-cache: 'false'
