Working on production builds

--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -20,6 +20,7 @@ jobs:
           cuda: '12.4.1'
           use-github-cache: 'false'
           use-local-cache: 'false'
+          log-file-suffix: '12.4.1.txt'
 
       - name: Run build script
         run: |
@@ -47,6 +48,7 @@ jobs:
           cuda: '12.2.1'
           use-github-cache: 'false'
           use-local-cache: 'false'
+          log-file-suffix: '12.2.1.txt'
 
       - name: Run build script
         run: |
@@ -74,6 +76,7 @@ jobs:
           cuda: '12.8.0'
           use-github-cache: 'false'
           use-local-cache: 'false'
+          log-file-suffix: '12.8.0.txt'
 
       - name: Run build script
         run: |
