--- a/.github/workflows/base-image.yml
+++ b/.github/workflows/base-image.yml
@@ -30,5 +30,9 @@ jobs:
       - name: Build Docker image
         run: docker build -f Dockerfile_base -t ghcr.io/${{ github.repository_owner }}/cuda-build-base:${{ github.event.inputs.tag }} .
 
+      - name: Build Docker runtime image
+        run: docker build -f runtime/slim.dockerfile -t ghcr.io/${{ github.repository_owner }}/cuda-runtime-slim:${{ github.event.inputs.tag }} .
+
       - name: Push Docker image
         run: docker push ghcr.io/${{ github.repository_owner }}/cuda-build-base:${{ github.event.inputs.tag }}
+        run: docker push ghcr.io/${{ github.repository_owner }}/cuda-runtime-slim:${{ github.event.inputs.tag }}
