--- a/.github/workflows/base-image.yml
+++ b/.github/workflows/base-image.yml
@@ -36,7 +36,8 @@ jobs:
         run: docker build -f Dockerfile_base -t ghcr.io/${{ github.repository_owner }}/cuda-build-base:${{ github.event.inputs.tag }} .
 
       - name: Build Docker runtime image
-        run: docker build -f runtime/slim.dockerfile -t ghcr.io/${{ github.repository_owner }}/cuda-runtime-slim:${{ github.event.inputs.tag }} .
+        run: |
+          docker build --squash -f runtime/slim.dockerfile -t ghcr.io/${{ github.repository_owner }}/cuda-runtime-slim:${{ github.event.inputs.tag }} .
 
       - name: Push Docker image
         if: ${{ github.event.inputs.runtime-only == 'false' }}
