--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -47,10 +47,10 @@ jobs:
 
       - name: Create docker
         run: |
-          cp profanity_cuda docker
-          cd docker
-          docker build -t profanity_cuda .
-          gvmkit-build profanity_cuda
+          cp profanity_cuda runtime/
+          cd runtime
+          docker build -t nvidia/profanity-cuda:12.2.1 .
+          gvmkit-build nvidia/profanity-cuda:12.2.1
 
       - name: Upload binary
         uses: actions/upload-artifact@v4
