Do not create output directory by default. You have to specify output directory if you need this functionality

--- a/runtime/Dockerfile
+++ b/runtime/Dockerfile
@@ -1,2 +1,2 @@
 FROM ghcr.io/vglm/cuda-runtime-slim:latest
-COPY profanity_cuda-12.2.1 /usr/local/bin/profanity_cuda
+COPY profanity_cuda /usr/local/bin/profanity_cuda
