--- a/runtime/Dockerfile
+++ b/runtime/Dockerfile
@@ -1,3 +1,3 @@
-FROM ghcr.io/vglm/cuda-runtime-slim:latest
+FROM ubuntu:22.04
 COPY profanity_cuda /usr/local/bin/profanity_cuda
 CMD ["/usr/local/bin/profanity_cuda"]
