Fix release action

--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -100,6 +100,9 @@ jobs:
       packages: read
 
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
