docker build and patterns

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,6 @@
-FROM ubuntu:22.04 AS libs
-
-FROM ubuntu:22.04
+FROM ubuntu:22.04 AS base
 RUN rm -rf /var
+RUN rm -rf /etc/* || true
 RUN rm -rf /usr/share
 RUN rm -rf /lib/apt  \
     && rm -rf /lib/dpkg  \
@@ -23,4 +22,6 @@ RUN find /usr/lib/x86_64-linux-gnu -type f  \
 RUN rm -rf /usr/sbing
 RUN rm -rf /usr/bin
 
-COPY profanity_cuda-12.2.1 /usr/bin/profanity_cuda
+FROM scratch
+COPY --from=base / /
+COPY profanity_cuda-12.2.1 /usr/local/bin/profanity_cuda
