--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,9 @@ set(CMAKE_CUDA_ARCHITECTURES 75 80 86 89)  # Modify according to your GPU
 add_executable(profanity_cuda
   profanity.cu
   ArgParser.hpp
-  keccak.cu
-  keccak.h
+  private_key.cu
+  private_key.h
+  private_key_search.cpp
   create3.cu
   create3search.cpp
   create3.h
@@ -23,6 +24,7 @@ add_executable(profanity_cuda
   utils.cpp
   debug_utils.hpp
   debug_utils.cpp
+  scorer.cuh
  )
 
  if(UNIX AND NOT APPLE)
