Test self hosted runner

--- a/.github/workflows/build-ubuntu.yml
+++ b/.github/workflows/build-ubuntu.yml
@@ -41,6 +41,7 @@ jobs:
         uses: Jimver/cuda-toolkit@v0.2.19
         with:
           cuda: '12.4.1'
+          linux-local-args: '["--toolkit"]'
 
       - name: Build project
         run: |
