--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -13,21 +13,20 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-gpu
+    runs-on: cuda-linux-runner
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Build project
-        run: |
-          python build-cross.py
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run benchmark
+      - name: Build docker
         run: |
-          python benchmark-cross.py
+          docker build -t profanity_cuda .
 
-      - name: Cleanup self hosted runner workspace
-        continue-on-error: true
-        run: |
-          git clean -ffdx
