--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -1,6 +1,8 @@
 name: Build self hosted
 
 on:
+  push:
+    branches: [ "main", "actions/build" ]
   workflow_dispatch:
     inputs:
       build_type:
@@ -12,8 +14,8 @@ on:
         required: false
 
 jobs:
-  build-windows:
-    runs-on: cuda-linux-runner
+  build-and-test-docker:
+    runs-on: linux-cuda-runner
 
     steps:
       - name: Checkout repository
