--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -34,4 +34,4 @@ jobs:
 
       - name: Run checks
         run: |
-          python test/check_pattern_generation.py
+          python -u test/check_pattern_generation.py
