Updated release action to include more cuda architectures

--- a/.github/workflows/release-action.yml
+++ b/.github/workflows/release-action.yml
@@ -27,41 +27,14 @@ jobs:
         run: |
           python build-cross.py
           mv profanity_cuda profanity_cuda-12.4.1
+        env:
+          CUDA_ARCHITECTURES: 61 70 75 80 86 89
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: profanity_cuda-12.4.1
           path: profanity_cuda-12.4.1
-          retention-days: 1
-
-  build-release-12-2-1:
-    name: Build Ubuntu 12.2.1
-    runs-on: ubuntu-22.04
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Cuda toolkit
-        uses: Jimver/cuda-toolkit@v0.2.21
-        with:
-          cuda: '12.2.1'
-          use-github-cache: 'false'
-          use-local-cache: 'false'
-          log-file-suffix: '12.2.1.txt'
-          linux-local-args: '["--toolkit"]'
-
-      - name: Run build script
-        run: |
-          python build-cross.py
-          mv profanity_cuda profanity_cuda-12.2.1
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: profanity_cuda-12.2.1
-          path: profanity_cuda-12.2.1
           retention-days: 1
 
   build-release-12-8-0:
@@ -85,6 +58,8 @@ jobs:
         run: |
           python build-cross.py
           mv profanity_cuda profanity_cuda-12.8.0
+        env:
+          CUDA_ARCHITECTURES: 61 70 75 80 86 89 90
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -114,11 +89,6 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: profanity_cuda-12.2.1
-
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
           name: profanity_cuda-12.8.0
 
       - name: Install gvmkit-build
@@ -135,16 +105,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Create gvmkit image 12.2.1
-        run: |
-          cp profanity_cuda-12.2.1 runtime/profanity_cuda
-          cd runtime
-          docker build -f ubuntu2204.dockerfile -t cuda .
-          gvmkit-build cuda --push-to nvidia/cuda-x-crunch:prod-12.2.1
-        env:
-          REGISTRY_USER: nvidia
-          REGISTRY_TOKEN: ${{ secrets.REGISTRY_TOKEN }}
 
       - name: Create gvmkit image 12.4.1
         run: |
@@ -182,6 +142,5 @@ jobs:
           files: |
             profanity_cuda-12.4.1
             profanity_cuda-12.8.0
-            profanity_cuda-12.2.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
