--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,9 +5,7 @@ project(profanity_cuda LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 20)
 
-if(DEFINED ENV{CUDA_ARCHITECTURES})
-    set(CMAKE_CUDA_ARCHITECTURES $ENV{CUDA_ARCHITECTURES})
-endif()
+set(CMAKE_CUDA_ARCHITECTURES 86)
 
 add_executable(profanity_cuda
   profanity.cu
