--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(profanity_cuda LANGUAGES CXX CUDA)
 
 set(CMAKE_CXX_STANDARD 20)
 
+# This entry is patched during production build. For debug build use only one architecture.
 set(CMAKE_CUDA_ARCHITECTURES 86)
 
 add_executable(profanity_cuda
@@ -30,9 +31,4 @@ add_executable(profanity_cuda
      target_include_directories(profanity_cuda PRIVATE /usr/local/cuda/targets/x86_64-linux/include)
  endif()
 
-
-# Additional compile options (optional)
-#target_compile_options(profanity_cuda PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:--use_fast_math>)
-
-#set_property(TARGET profanity_cuda PROPERTY CUDA_ARCHITECTURES 72)
 
