--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -35,3 +35,7 @@ jobs:
       - name: Run checks
         run: |
           python -u test/check_pattern_generation.py
+
+      - name: Build vast docker
+        run: |
+          docker build -t vast_profanity_cuda -f vast/Dockerfile .
