--- a/vast/Dockerfile
+++ b/vast/Dockerfile
@@ -6,9 +6,6 @@ RUN . /venv/main/bin/activate
 
 # Our custom installation
 
-RUN curl -sSL https://github.com/vglm/cuda-x-crunch/releases/download/v0.5.2/profanity_cuda-12.4.1 -o profanity_cuda \
-    && chmod +x profanity_cuda  \
-    && mv profanity_cuda /usr/local/bin/profanity_cuda
-
 COPY runner .
-CMD ["python", "runner/runner.py"]
+COPY profanity_cuda /usr/local/bin/profanity_cuda
+CMD ["python", "-u", "runner/runner.py"]
