--- a/.github/workflows/build-self-hosted.yml
+++ b/.github/workflows/build-self-hosted.yml
@@ -43,6 +43,14 @@ jobs:
         run: |
           python -u test/check_pattern_generation.py
 
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
       - name: Build vast docker
         run: |
-          docker build -t vast_profanity_cuda -f vast/Dockerfile .
+          docker build -t scx1332/vast_profanity_cuda:latest -f vast/Dockerfile .
+          docker push scx1332/vast_profanity_cuda:latest
