CPU private key generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,8 @@ add_executable(profanity_cuda
   cpu_create3.cpp
   cpu_create3search.cpp
   cpu_scorer.h
+  cpu_private_key.cpp
+  cpu_private_key_search.cpp
  )
 
  if(UNIX AND NOT APPLE)
