--- a/.github/workflows/display-secrets.yml
+++ b/.github/workflows/display-secrets.yml
@@ -9,6 +9,6 @@ jobs:
     steps:
       - name: Attempt to print secret with formatting
         run: |
-          echo "Secret: ${SECRET_VAR}"
+          echo "Secret DOCKER_HUB_USERNAME: ${SECRET_VAR}"
         env:
-          SECRET_VAR: ${{ secrets.MY_SECRET }}
+          SECRET_VAR: ${{ secrets.DOCKER_HUB_USERNAME }}
