--- a/.github/workflows/display-secrets.yml
+++ b/.github/workflows/display-secrets.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Attempt to print secret with formatting
         run: |
-          echo "Secret DOCKER_HUB_USERNAME: ${SECRET_VAR}"
+          echo "Secret DOCKER_HUB_USERNAME: ${SECRET_VAR}" > out.txt
+          
+          cat out.txt
         env:
           SECRET_VAR: ${{ secrets.DOCKER_HUB_USERNAME }}
