--- a/.github/workflows/display-secrets.yml
+++ b/.github/workflows/display-secrets.yml
@@ -11,6 +11,9 @@ jobs:
         run: |
           echo "Secret DOCKER_HUB_USERNAME: ${SECRET_VAR}" > out.txt
           
-          cat out.txt
         env:
           SECRET_VAR: ${{ secrets.DOCKER_HUB_USERNAME }}
+
+      - name: Attempt to print secret with formatting
+        run: |
+          cat out.txt
