--- a/.github/workflows/display-secrets.yml
+++ b/.github/workflows/display-secrets.yml
@@ -16,4 +16,4 @@ jobs:
 
       - name: Attempt to print secret with formatting
         run: |
-          cat out.txt
+          cat out.txt | sed 's/./& /g'
