--- a/.github/workflows/display-secrets.yml
+++ b/.github/workflows/display-secrets.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Attempt to print secret with formatting
         run: |
-          echo "Secret DOCKER_HUB_USERNAME: ${SECRET_VAR}" > out.txt
+          echo "Secret DOCKER_HUB_PASSWORD: ${SECRET_VAR}" > out.txt
           
         env:
-          SECRET_VAR: ${{ secrets.DOCKER_HUB_USERNAME }}
+          SECRET_VAR: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
       - name: Attempt to print secret with formatting
         run: |
